chore: update .sonarcloud.properties
Signed-off-by: Alan Brault <alan.brault@visus.io>

--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -1,37 +1,41 @@
+# ============================================================================
+# Project Identification
+# ============================================================================
 sonar.organization=visus
 sonar.projectKey=visus:libcuid2
 sonar.projectName=libcuid2
+sonar.projectBaseDir=.
+sonar.sourceEncoding=UTF-8
 
+# ============================================================================
+# Source Paths
+# ============================================================================
 sonar.sources=src,include
 sonar.tests=tests
 
-sonar.inclusions=\
-  src/**/*.cpp,\
-  include/**/*.hpp
+# ============================================================================
+# Analysis Exclusions
+# ============================================================================
 
-sonar.test.inclusions=\
-  tests/**/*.cpp
-
+# Build directories
 sonar.exclusions=\
-  build-*/**, \
-  cmake-build-*/**, \
-  **/vcpkg_installed/**, \
-  **/vcpkg/**, \
-  **/.idea/**, \
-  **/.vs/**, \
-  **/.vscode/**, \
-  **/CMakeFiles/**, \
-  **/cmake-build-**/**, \
-  **/*.user, \
-  **/*.autosave, \
-  **/moc_*.cpp, \
-  **/ui_*.h, \
-  **/qrc_*.cpp
+  build-*/**,\
+  cmake-build-*/**,\
+  **/CMakeFiles/**,\
+  **/vcpkg_installed/**,\
+  **/vcpkg/**
 
+# IDE directories
+sonar.exclusions+=\
+  **/.idea/**,\
+  **/.vs/**,\
+  **/.vscode/**,\
+  **/*.user,\
+  **/*.autosave
+
+# ============================================================================
+# Coverage Exclusions
+# ============================================================================
 sonar.coverage.exclusions=\
-  tests/**/*.cpp, \
+  tests/**/*.cpp,\
   src/cuid2gen.cpp
-
-sonar.language=cpp
-sonar.sourceEncoding=UTF-8
-sonar.projectBaseDir=.
