chore: update sonar-project.properties
Signed-off-by: Alan Brault <alan.brault@visus.io>

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,14 +10,11 @@ sonar.sourceEncoding=UTF-8
 # ============================================================================
 # Source Paths
 # ============================================================================
-sonar.sources=src,include
+sonar.sources=src
 sonar.tests=tests
-
-# Only calculate coverage for source files (headers are declarations)
 sonar.coverage.exclusions=\
   tests/**/*.cpp,\
-  src/cuid2gen.cpp,\
-  include/**/*.hpp
+  src/cuid2gen.cpp
 
 # ============================================================================
 # C++ Analysis Configuration
