chore: update sonar-project.properties
Signed-off-by: Alan Brault <alan.brault@visus.io>

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,9 +12,7 @@ sonar.sourceEncoding=UTF-8
 # ============================================================================
 sonar.sources=src
 sonar.tests=tests
-sonar.coverage.exclusions=\
-  tests/**/*.cpp,\
-  src/cuid2gen.cpp
+sonar.coverage.exclusions=**/cuid2gen.cpp
 
 # ============================================================================
 # C++ Analysis Configuration
