--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,8 @@ jobs:
             libssl-dev \
             libboost-all-dev \
             libfmt-dev \
-            gcovr
+            python3-pip
+          pip3 install gcovr==8.4
 
       - name: Setup vcpkg
         uses: lukka/run-vcpkg@5e0cab206a5ea620130caf672fce3e4a6b5666a1 # v11.5
