--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,6 @@
 cmake_minimum_required(VERSION 4.0)
 project(libcuid2 VERSION 0.0.1 LANGUAGES CXX)
 
-# C++ Standard
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
@@ -13,106 +12,99 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 # ==============================================================================
 # Compiler Flags
 # ==============================================================================
-# Warning flags (all configurations)
 if(MSVC)
-    add_compile_options(
-        /W4           # High warning level
-        /WX-          # Don't treat warnings as errors (developers can override)
-        /permissive-  # Standards conformance mode
-    )
+    add_compile_options(/W4)
+    add_compile_options(/WX-)
+    add_compile_options(/permissive-)
 else()
     add_compile_options(
-        -Wall         # Enable most warnings
-        -Wextra       # Additional warnings
-        -Wpedantic    # Strict ISO C++ compliance
-        -Wshadow      # Warn on variable shadowing
-        -Wnon-virtual-dtor  # Warn on non-virtual destructors
-        -Wcast-align  # Warn on pointer casts with alignment issues
-        -Wunused      # Warn on unused variables/functions
-        -Woverloaded-virtual  # Warn on overloaded virtual functions
-        -pipe         # Use pipes instead of temp files (faster compilation)
+        -Wall
+        -Wextra
+        -Wpedantic
+        -Wshadow
+        -Wnon-virtual-dtor
+        -Wcast-align
+        -Wunused
+        -Woverloaded-virtual
+        -pipe
     )
 endif()
 
-# ==============================================================================
-# Security Hardening Flags
-# ==============================================================================
+# Security hardening
 if(MSVC)
-    add_compile_options(/GS)      # Buffer security checks (stack protector)
-    add_compile_options(/sdl)     # Enable additional security checks
+    add_compile_options(/GS)
+    add_compile_options(/sdl)
 else()
-    # GCC/Clang (including MinGW)
-    add_compile_options(-fstack-protector-strong)  # Stack buffer overflow protection
+    add_compile_options(-fstack-protector-strong)
 
-    # _FORTIFY_SOURCE requires glibc (not available on Windows/MinGW)
     if(NOT WIN32)
-        add_compile_options(-D_FORTIFY_SOURCE=2)   # Compile-time and runtime checks
+        add_compile_options(-D_FORTIFY_SOURCE=2)
     endif()
 
-    # Control flow integrity (x86_64 only, GCC 8+ / Clang 8+)
+    # Control flow integrity (x86_64 only)
     if(CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64|AMD64")
         include(CheckCXXCompilerFlag)
         check_cxx_compiler_flag(-fcf-protection=full HAS_CF_PROTECTION)
         if(HAS_CF_PROTECTION)
-            add_compile_options(-fcf-protection=full)  # Control flow integrity
+            add_compile_options(-fcf-protection=full)
         endif()
     endif()
 
-    # NOTE: The following security flags are intentionally disabled:
-    # - -fstack-clash-protection: Interferes with C++ exception handling on some platforms
-    # - -mbranch-protection=standard (ARM64): Conflicts with exception unwinding on macOS ARM64
-    # These flags caused exceptions to not be caught properly during testing.
+    # NOTE: -fstack-clash-protection and -mbranch-protection interfere with
+    # C++ exception handling and are intentionally disabled
 endif()
 
-# ==============================================================================
-# Build Configuration Flags
-# ==============================================================================
+# Build configurations
 if(MSVC)
-    # Debug configuration
-    add_compile_options($<$<CONFIG:Debug>:/Od>)      # No optimization
-    add_compile_options($<$<CONFIG:Debug>:/Zi>)      # Debug symbols
-    add_compile_options($<$<CONFIG:Debug>:/RTC1>)    # Runtime checks
-
-    # Release configuration
-    add_compile_options($<$<CONFIG:Release>:/O2>)    # Optimize for speed
-    add_compile_options($<$<CONFIG:Release>:/GL>)    # Whole program optimization
-    add_compile_options($<$<CONFIG:Release>:/DNDEBUG>)  # Disable assertions
-    add_link_options($<$<CONFIG:Release>:/LTCG>)     # Link-time code generation
-    add_link_options($<$<CONFIG:Release>:/OPT:REF>)  # Remove unreferenced functions
-    add_link_options($<$<CONFIG:Release>:/OPT:ICF>)  # Identical COMDAT folding
+    add_compile_options(
+        $<$<CONFIG:Debug>:/Od>
+        $<$<CONFIG:Debug>:/Zi>
+        $<$<CONFIG:Debug>:/RTC1>
+        $<$<CONFIG:Release>:/O2>
+        $<$<CONFIG:Release>:/GL>
+        $<$<CONFIG:Release>:/DNDEBUG>
+    )
+    add_link_options(
+        $<$<CONFIG:Release>:/LTCG>
+        $<$<CONFIG:Release>:/OPT:REF>
+        $<$<CONFIG:Release>:/OPT:ICF>
+    )
 else()
-    # Debug configuration
-    add_compile_options($<$<CONFIG:Debug>:-O0>)      # No optimization
-    add_compile_options($<$<CONFIG:Debug>:-g3>)      # Maximum debug symbols
-    add_compile_options($<$<CONFIG:Debug>:-fno-omit-frame-pointer>)  # Preserve frame pointers
-
-    # Release configuration
-    add_compile_options($<$<CONFIG:Release>:-O2>)    # Standard optimization
-    add_compile_options($<$<CONFIG:Release>:-DNDEBUG>)  # Disable assertions
-    add_compile_options($<$<CONFIG:Release>:-flto>)  # Link-time optimization
-    add_compile_options($<$<CONFIG:Release>:-ffunction-sections>)  # Separate functions
-    add_compile_options($<$<CONFIG:Release>:-fdata-sections>)      # Separate data
+    add_compile_options(
+        $<$<CONFIG:Debug>:-O0>
+        $<$<CONFIG:Debug>:-g3>
+        $<$<CONFIG:Debug>:-fno-omit-frame-pointer>
+        $<$<CONFIG:Release>:-O2>
+        $<$<CONFIG:Release>:-DNDEBUG>
+        $<$<CONFIG:Release>:-flto>
+        $<$<CONFIG:Release>:-ffunction-sections>
+        $<$<CONFIG:Release>:-fdata-sections>
+    )
     add_link_options($<$<CONFIG:Release>:-flto>)
 
     if(APPLE)
-        add_link_options($<$<CONFIG:Release>:-Wl,-dead_strip>)     # Strip unused code (macOS)
+        add_link_options($<$<CONFIG:Release>:-Wl,-dead_strip>)
     else()
-        add_link_options($<$<CONFIG:Release>:-Wl,--gc-sections>)   # Strip unused code (Linux/BSD)
-        add_link_options($<$<CONFIG:Release>:-Wl,--strip-all>)     # Strip all symbols
+        add_link_options(
+            $<$<CONFIG:Release>:-Wl,--gc-sections>
+            $<$<CONFIG:Release>:-Wl,--strip-all>
+        )
     endif()
 endif()
 
-# Optional: Enable sanitizers for Debug builds (can be disabled with -DENABLE_SANITIZERS=OFF)
-option(ENABLE_SANITIZERS "Enable address and undefined behavior sanitizers in Debug builds" OFF)
+# Optional features
+option(ENABLE_SANITIZERS "Enable sanitizers in Debug builds" OFF)
 if(ENABLE_SANITIZERS AND CMAKE_BUILD_TYPE STREQUAL "Debug" AND NOT MSVC)
-    add_compile_options(-fsanitize=address -fsanitize=undefined)
-    add_link_options(-fsanitize=address -fsanitize=undefined)
+    add_compile_options(-fsanitize=address)
+    add_compile_options(-fsanitize=undefined)
+    add_link_options(-fsanitize=address)
+    add_link_options(-fsanitize=undefined)
 endif()
 
-# Optional: Enable code coverage for Debug builds (can be enabled with -DENABLE_COVERAGE=ON)
-option(ENABLE_COVERAGE "Enable code coverage instrumentation in Debug builds" OFF)
+option(ENABLE_COVERAGE "Enable code coverage in Debug builds" OFF)
 if(ENABLE_COVERAGE AND CMAKE_BUILD_TYPE STREQUAL "Debug" AND NOT MSVC)
-    add_compile_options(--coverage -fprofile-update=atomic)
+    add_compile_options(--coverage)
+    add_compile_options(-fprofile-update=atomic)
     add_link_options(--coverage)
 endif()
 
@@ -123,9 +115,6 @@ find_package(OpenSSL REQUIRED)
 find_package(Boost REQUIRED COMPONENTS unit_test_framework)
 find_package(fmt CONFIG REQUIRED)
 
-# ==============================================================================
-# Platform-Specific Configuration
-# ==============================================================================
 if(WIN32)
     set(PLATFORM_LIBS kernel32)
 else()
@@ -133,25 +122,9 @@ else()
 endif()
 
 # ==============================================================================
-# Build Type Configuration
-# ==============================================================================
-# Windows always builds shared libraries
-if(WIN32)
-    set(BUILD_SHARED_LIBS ON CACHE BOOL "Build shared libraries (forced ON for Windows)" FORCE)
-    message(STATUS "Windows detected: building shared library (forced)")
-else()
-    option(BUILD_SHARED_LIBS "Build shared libraries" ON)
-    if(BUILD_SHARED_LIBS)
-        message(STATUS "Building shared library")
-    else()
-        message(STATUS "Building static library")
-    endif()
-endif()
-
-# ==============================================================================
 # Library Target
 # ==============================================================================
-add_library(cuid2
+add_library(cuid2 SHARED
     src/cuid2.cpp
     src/fingerprint.cpp
     src/counter.cpp
@@ -191,54 +164,44 @@ option(BUILD_TESTS "Build unit tests" ON)
 if(BUILD_TESTS)
     enable_testing()
 
-    # Counter test
-    add_executable(counter_test
+    # Helper function for test targets
+    function(add_unit_test TEST_NAME)
+        add_executable(${TEST_NAME} ${ARGN})
+
+        target_include_directories(${TEST_NAME}
+            PRIVATE
+                ${CMAKE_CURRENT_SOURCE_DIR}/include
+                ${CMAKE_CURRENT_SOURCE_DIR}/src
+        )
+
+        target_link_libraries(${TEST_NAME}
+            PRIVATE
+                ${PLATFORM_LIBS}
+                OpenSSL::Crypto
+                Boost::unit_test_framework
+                fmt::fmt
+        )
+
+        # Define cuid2_EXPORTS for test builds to ensure consistent symbol visibility
+        # Tests compile library sources directly, so they need the same export macro behavior
+        target_compile_definitions(${TEST_NAME} PRIVATE cuid2_EXPORTS)
+
+        add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})
+    endfunction()
+
+    add_unit_test(counter_test
         tests/counter_test.cpp
         src/counter.cpp
         src/platform.cpp
     )
 
-    target_include_directories(counter_test
-        PRIVATE
-            ${CMAKE_CURRENT_SOURCE_DIR}/include
-            ${CMAKE_CURRENT_SOURCE_DIR}/src
-    )
-
-    target_link_libraries(counter_test
-        PRIVATE
-            ${PLATFORM_LIBS}
-            OpenSSL::Crypto
-            Boost::unit_test_framework
-            fmt::fmt
-    )
-
-    add_test(NAME CounterTest COMMAND counter_test)
-
-    # Fingerprint test
-    add_executable(fingerprint_test
+    add_unit_test(fingerprint_test
         tests/fingerprint_test.cpp
         src/fingerprint.cpp
         src/platform.cpp
     )
 
-    target_include_directories(fingerprint_test
-        PRIVATE
-            ${CMAKE_CURRENT_SOURCE_DIR}/include
-            ${CMAKE_CURRENT_SOURCE_DIR}/src
-    )
-
-    target_link_libraries(fingerprint_test
-        PRIVATE
-            ${PLATFORM_LIBS}
-            OpenSSL::Crypto
-            Boost::unit_test_framework
-            fmt::fmt
-    )
-
-    add_test(NAME FingerprintTest COMMAND fingerprint_test)
-
-    # Cuid2 test
-    add_executable(cuid2_test
+    add_unit_test(cuid2_test
         tests/cuid2_test.cpp
         src/cuid2.cpp
         src/counter.cpp
@@ -247,74 +210,22 @@ if(BUILD_TESTS)
         src/utils.cpp
     )
 
-    target_include_directories(cuid2_test
-        PRIVATE
-            ${CMAKE_CURRENT_SOURCE_DIR}/include
-            ${CMAKE_CURRENT_SOURCE_DIR}/src
-    )
-
-    target_link_libraries(cuid2_test
-        PRIVATE
-            ${PLATFORM_LIBS}
-            OpenSSL::Crypto
-            Boost::unit_test_framework
-            fmt::fmt
-    )
-
-    add_test(NAME Cuid2Test COMMAND cuid2_test)
-
-    # Utils test
-    add_executable(utils_test
+    add_unit_test(utils_test
         tests/utils_test.cpp
         src/utils.cpp
         src/platform.cpp
     )
 
-    target_include_directories(utils_test
-        PRIVATE
-            ${CMAKE_CURRENT_SOURCE_DIR}/include
-            ${CMAKE_CURRENT_SOURCE_DIR}/src
-    )
-
-    target_link_libraries(utils_test
-        PRIVATE
-            ${PLATFORM_LIBS}
-            OpenSSL::Crypto
-            Boost::unit_test_framework
-            fmt::fmt
-    )
-
-    add_test(NAME UtilsTest COMMAND utils_test)
-
-    # Platform test
-    add_executable(platform_test
+    add_unit_test(platform_test
         tests/platform_test.cpp
         src/platform.cpp
     )
-
-    target_include_directories(platform_test
-        PRIVATE
-            ${CMAKE_CURRENT_SOURCE_DIR}/include
-            ${CMAKE_CURRENT_SOURCE_DIR}/src
-    )
-
-    target_link_libraries(platform_test
-        PRIVATE
-            ${PLATFORM_LIBS}
-            OpenSSL::Crypto
-            Boost::unit_test_framework
-            fmt::fmt
-    )
-
-    add_test(NAME PlatformTest COMMAND platform_test)
 endif()
 
 # ==============================================================================
 # CLI Executable
 # ==============================================================================
-add_executable(cuid2gen
-    src/cuid2gen.cpp
-)
+add_executable(cuid2gen src/cuid2gen.cpp)
 
 target_link_libraries(cuid2gen
     PRIVATE
@@ -327,7 +238,6 @@ target_link_libraries(cuid2gen
 # ==============================================================================
 include(GNUInstallDirs)
 
-# Install library
 install(TARGETS cuid2
     EXPORT cuid2Targets
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
@@ -335,32 +245,39 @@ install(TARGETS cuid2
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
 
-# Install headers
 install(DIRECTORY include/
     DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
     FILES_MATCHING PATTERN "*.hpp"
 )
 
-# Install CLI executable
 install(TARGETS cuid2gen
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
 
-# Install manpages (English - default locale)
-install(FILES man/man1/cuid2gen.1
+# Install Windows runtime dependencies (DLLs)
+if(WIN32)
+    install(IMPORTED_RUNTIME_ARTIFACTS cuid2 cuid2gen
+        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+    )
+endif()
+
+# Install manpages
+install(FILES
+    man/man1/cuid2gen.1
     DESTINATION ${CMAKE_INSTALL_MANDIR}/man1
 )
 
-install(FILES man/man3/libcuid2.3
+install(FILES
+    man/man3/libcuid2.3
     DESTINATION ${CMAKE_INSTALL_MANDIR}/man3
 )
 
-install(FILES man/man7/libcuid2.7
+install(FILES
+    man/man7/libcuid2.7
     DESTINATION ${CMAKE_INSTALL_MANDIR}/man7
 )
 
-# Install localized manpages (if available)
-# Each language directory is installed to ${CMAKE_INSTALL_MANDIR}/<lang>/
+# Install localized manpages
 foreach(LANG de es fr it ja ko pl pt pt_BR ru zh_CN)
     if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/man/${LANG})
         install(DIRECTORY man/${LANG}/
@@ -374,14 +291,13 @@ foreach(LANG de es fr it ja ko pl pt pt_BR ru zh_CN)
     endif()
 endforeach()
 
-# Install CMake package configuration
+# CMake package configuration
 install(EXPORT cuid2Targets
     FILE cuid2Targets.cmake
     NAMESPACE cuid2::
     DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/cuid2
 )
 
-# Create package config file
 include(CMakePackageConfigHelpers)
 write_basic_package_version_file(
     "${CMAKE_CURRENT_BINARY_DIR}/cuid2ConfigVersion.cmake"
