chore: update ci.yml
Signed-off-by: Alan Brault <alan.brault@visus.io>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,12 +6,16 @@ on:
       - main
     paths-ignore:
       - '**.md'
+      - 'man/**'
+      - 'debian/**'
       - 'renovate.json'
       - 'LICENSE'
       - '.gitignore'
   pull_request:
     paths-ignore:
       - '**.md'
+      - 'man/**'
+      - 'debian/**'
       - 'renovate.json'
       - 'LICENSE'
       - '.gitignore'
