--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,7 @@ on:
       - 'renovate.json'
       - 'LICENSE'
       - '.gitignore'
+      - '.github/workflows/lint_pullrequest.yml'
   pull_request:
     paths-ignore:
       - '**.md'
@@ -19,6 +20,7 @@ on:
       - 'renovate.json'
       - 'LICENSE'
       - '.gitignore'
+      - '.github/workflows/lint_pullrequest.yml'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
