chore(github): update labels
Signed-off-by: Alan Brault <alan.brault@visus.io>

--- a/.github/ISSUE_TEMPLATE/build_issue.yml
+++ b/.github/ISSUE_TEMPLATE/build_issue.yml
@@ -1,7 +1,7 @@
 name: Build/Installation Issue
 description: Report problems building or installing libcuid2
 title: "[Build]: "
-labels: ["build", "needs-triage"]
+labels: ["Issue: Pending Confirmation"]
 body:
   - type: markdown
     attributes:
