--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,7 +1,7 @@
 name: Bug Report
 description: Report a bug or unexpected behavior in libcuid2
 title: "[Bug]: "
-labels: ["bug", "needs-triage"]
+labels: ["Issue: Pending Confirmation"]
 body:
   - type: markdown
     attributes:
