feat(rpm): add rpm spec
Signed-off-by: Alan Brault <alan.brault@visus.io>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,7 @@ on:
       - '**.md'
       - 'man/**'
       - 'debian/**'
+      - 'rpm/**'
       - 'renovate.json'
       - 'LICENSE'
       - '.gitignore'
@@ -18,6 +19,7 @@ on:
       - '**.md'
       - 'man/**'
       - 'debian/**'
+      - 'rpm/**'
       - 'renovate.json'
       - 'LICENSE'
       - '.gitignore'
